@@ -1,12 +1,10 @@
 package com.github.mito99.javacallgraph.bytecode;
 
 import static org.assertj.core.api.Assertions.assertThat;
-
-import java.nio.file.Path; // 追記
-
+import java.nio.file.Paths;
 import org.junit.jupiter.api.Test;
-
 import lombok.SneakyThrows;
+import lombok.val;
 
 public class MtClassPoolTest {
 
@@ -14,16 +12,16 @@ public class MtClassPoolTest {
 
   @Test
   void クラス名を取得するテスト() {
-    final var pool = MtClassPool.getDefault();
-    final var classInfo = pool.getClassOrThrow("java.lang.String");
+    val pool = MtClassPool.getDefault();
+    val classInfo = pool.getClassOrThrow("java.lang.String");
     assertThat(classInfo.getClassName()).isEqualTo("java.lang.String");
   }
 
   @Test
   @SneakyThrows
   void モジュールを取得するテスト() {
-    final var modulePath = Path.of(TEST_DIR, "commons-io-2.17.0");
-    final var module = MtClassPool.getModule(modulePath, "commons-io-2.17.0", "jar");
+    val modulePath = Paths.get(TEST_DIR).resolve("commons-io-2.17.0");
+    val module = MtClassPool.getModule(modulePath, "commons-io-2.17.0", "jar");
     assertThat(module.getName()).isEqualTo("commons-io-2.17.0");
     assertThat(module.getType()).isEqualTo("jar");
     assertThat(module.getClasses()).hasSize(335);
@@ -31,13 +29,13 @@ public class MtClassPoolTest {
 
   @Test
   void モジュールからクラスを取得するテスト() {
-    final var modulePath = Path.of(TEST_DIR, "commons-io-2.17.0");
-    final var module = MtClassPool.getModule(modulePath, "commons-io-2.17.0", "jar");
-    final var classInfo = module.getClass("org.apache.commons.io.FileUtils");
+    val modulePath = Paths.get(TEST_DIR).resolve("commons-io-2.17.0");
+    val module = MtClassPool.getModule(modulePath, "commons-io-2.17.0", "jar");
+    val classInfo = module.getClass("org.apache.commons.io.FileUtils");
     assertThat(classInfo.getClassName()).isEqualTo("org.apache.commons.io.FileUtils");
 
-    final var method = classInfo.getMethod("copyFile", "java.io.File", "java.io.File");
-    final var calledMethods = method.getCalledMethods();
+    val method = classInfo.getMethod("copyFile", "java.io.File", "java.io.File");
+    val calledMethods = method.getCalledMethods();
     assertThat(calledMethods).hasSize(1);
   }
 }
