@@ -4,12 +4,14 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 import java.util.List;
-import java.util.Map;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import com.github.mito99.javacallgraph.bytecode.MtClass;
 import com.github.mito99.javacallgraph.bytecode.MtModule;
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+import lombok.val;
 
 public class GraphDbRepositoryTest {
 
@@ -26,18 +28,18 @@ public class GraphDbRepositoryTest {
   }
 
   @Test
-  void registerClasses() {
+  public void registerClasses() {
 
     // テスト対象のインスタンス化
-    var repository = new GraphDbRepository(this.session);
+    val repository = new GraphDbRepository(this.session);
     repository.deleteAllNodes();
 
     // ダミーデータの作成
     MtModule module = mock(MtModule.class);
     when(module.getName()).thenReturn("testModule");
     when(module.getType()).thenReturn("testType");
-    List<MtClass> classes = List.of(mock(MtClass.class));
-    when(module.getClasses()).thenReturn(Map.of("TestClass", classes.get(0)));
+    List<MtClass> classes = ImmutableList.of(mock(MtClass.class));
+    when(module.getClasses()).thenReturn(ImmutableMap.of("TestClass", classes.get(0)));
     when(classes.get(0).getClassName()).thenReturn("TestClass");
     when(classes.get(0).getPackageName()).thenReturn("testPackage");
     when(classes.get(0).getDigest()).thenReturn("testHashCode");
@@ -46,7 +48,7 @@ public class GraphDbRepositoryTest {
     repository.registerClasses(this.session, "testModule", classes);
 
     // 検証
-    var result = this.session.readTransaction(tx -> {
+    val result = this.session.readTransaction(tx -> {
       return tx.run("MATCH (c:Class) RETURN c.name as name").list(r -> r.get("name").asString());
     });
     assertThat(result).containsExactly("TestClass");
